--- a/LetsDish/LetsDish.Tests/packages.config
+++ b/LetsDish/LetsDish.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.6.5" targetFramework="net461" />
+  <package id="AngularJS.Route" version="1.6.5" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
