--- a/LetsDish/LetsDish/LetsDish.csproj
+++ b/LetsDish/LetsDish/LetsDish.csproj
@@ -124,6 +124,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -201,6 +204,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\FontAwesomeBundleConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
@@ -271,6 +275,10 @@
     <Compile Include="Migrations\201801062203429_renameRecipeList.Designer.cs">
       <DependentUpon>201801062203429_renameRecipeList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801090718101_addPicsToEvents.cs" />
+    <Compile Include="Migrations\201801090718101_addPicsToEvents.Designer.cs">
+      <DependentUpon>201801090718101_addPicsToEvents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -288,10 +296,19 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fontawesome\font-awesome.css" />
+    <Content Include="Content\fontawesome\font-awesome.min.css" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="images\letsdishbackground.jpg" />
+    <Content Include="images\Letsdishfooter.png" />
+    <Content Include="images\letsdishmyeventsheader.PNG" />
+    <Content Include="images\letsdishmyrecipesheader.PNG" />
+    <Content Include="images\letsdishshoppinglistheader.PNG" />
     <Content Include="images\placeholder.png" />
+    <Content Include="images\RecipeCard.PNG" />
     <Content Include="ngApp\app.js" />
     <Content Include="ngApp\appConfig.js" />
     <Content Include="ngApp\appConstants.js" />
@@ -343,6 +360,10 @@
     </Content>
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -409,6 +430,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801062203429_renameRecipeList.resx">
       <DependentUpon>201801062203429_renameRecipeList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801090718101_addPicsToEvents.resx">
+      <DependentUpon>201801090718101_addPicsToEvents.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
