--- a/LetsDish/LetsDish/packages.config
+++ b/LetsDish/LetsDish/packages.config
@@ -5,6 +5,8 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="FontAwesome" version="4.0.3" targetFramework="net461" />
+  <package id="FontAwesome.MVC" version="1.0.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -46,5 +48,6 @@
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="RestSharp" version="106.2.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
